Fixed Set problem
Now showing the alingment where the kmers appear one next to the other.
Is not allowed backwards.
Funny thing: This is less percentage than just doing the exact search